fixing missing colour var

--- a/webroot/less/styles.less
+++ b/webroot/less/styles.less
@@ -1,5 +1,6 @@
-/* Good-Loop styling (which might mess up e.g. SoGive) 
-NOT included by default (yet) */
+/* Good-Loop styling */
+
+@gl-red: #C83312;
 
 // Headers
 
